lab1/Test/L1-A-10-47.output
Error Type B at Line 42
Error Type A at Line 47
Error Type A at Line 50
Error Type A at Line 52
Error Type A at Line 70
Error Type A at Line 77
